--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,18 @@ red - #ee5253
 
 */
 
-* {
-  border: 1px solid red;
-}
-
-/* html {
-background-image: url(./assets/burger-friends.jpg);
+html {
+  font-family: 'Roboto', sans-serif;
+  background-image: url(./assets/burger-friends.jpg);
   background-size: cover;
   height: 100%;
   display: flex;
   justify-content: space-around;
-} */
+}
+
+body{
+  margin: 0;
+}
 
 main {
   display: flex;
@@ -26,34 +27,114 @@ main {
 }
 header{
   display: flex;
-  justify-content: space-around;
+  width: 100vw;
+  height: 2.5rem;
+  margin-bottom: 2rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #0fb9b1;
 }
+
+p {
+  padding-left: 10px;
+}
+
 section {
   display: flex;
   justify-content: space-evenly;
 }
 
 article {
+  width: 380px;
+  height: 280px;
   display: flex;
   flex-direction: column;
+  background: rgba(225, 225, 225, .9);
 }
 
-.left{
+.red {
+  color: #ee5253
+}
+
+input {
+  height: 30;
+}
+
+button.button.cook{   
+  width: 175;
+  height: 25;
+}
+
+button.button.new {
+  height: 30;
+  margin-left: 15px;
+}
+
+.radio-btn{
   color: black;
+
+}
+
+.left {
+  
 }
 
 .right{
-  width: 150;
-  height: 150;
   align-items: center;
   justify-content: center;
 }
 
 img {
-  width: 75px;
-  height: 75px;
+  width: 120px;
+  height: 120px;
 }
 
 .hidden {
   display: none
+}
+
+.italic {
+  font-style: italic;
+}
+
+.favorite-card {
+  display: flex;
+  justify-content: space-around;
+}
+
+.favorite {
+  align-items: center;
+  justify-content: space-around;
+}
+
+button {
+  color: black;
+  background-color: #0fb9b1;
+  border-radius: 4px;
+  border:none;
+}
+
+.add-recipe {
+  background-color: EFEFEF;
+  height: 25px;
+  margin-right: 10px;
+
+}
+
+.go-home {
+  width: min-content;
+}
+
+footer {
+  color: black;
+  width: 100vw;
+  position: fixed;
+  bottom: 0;
+
+  padding-top: 15px;
+  background: rgba(225, 225, 225, .9);
+}
+
+.form {
+  margin-left: 20px;
 }
